--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -34,7 +34,6 @@
   "User": "User",
   "Manage_product": "Product Management",
   "List_product": "Product List",
-  "Type_product": "Product Category",
   "List_order": "Order List",
   "List_review": "Review List",
   "Setting": "Settings",
@@ -217,7 +216,6 @@
   "Add_to_cart": "Add to cart",
   "not_review": "No reviews yet",
   "Sold_product": "Sold product",
-  "Product": "Product",
   "Still": "Still",
   "product_in_stock": "Products in stock",
   "Description_product": "Product description",
@@ -327,5 +325,27 @@
   "Payment_vn_pay_failed": "Payment VNPay failed",
   "ratings": "ratings",
   "comments": "comments",
-  "Product_details": "Details product"
+  "Product_details": "Details product",
+  "Home": "Home",
+  "About_Us": "About Us",
+  "Booking_now": "Book Now",
+  "Package": "Service",
+  "Contact_Us": "Contact Us",
+  "Opening_Daily": "Open Daily",
+  "Quantity_quest": "Number of Guests",
+  "Duration": "Duration",
+  "Others_packages": "Other Service Notes",
+  "Pickup_time": "Arrival Date",
+  "Spa_Package": "Our Services",
+  "About_urban_spa": "About Urban Spa",
+  "Premium_Spa_And_Relaxation_And_Beauty": "Premium Spa, Relaxation, and Beauty",
+  "Enter_your_quantity": "Enter the number of guests",
+  "Enter_your_notes": "Enter additional service notes",
+  "contact_1": "If you're looking for a relaxing and rejuvenating experience, our spa is the perfect place for you.",
+  "contact_2": "We are committed to providing the best quality service.",
+  "contact_3": "Please contact us for your appointment.",
+  "Email": "Email",
+  "Inbox_Facebook": "Facebook Inbox",
+  "Hotline": "Hotline (WhatsApp / Zalo)",
+  "Be_Beauty_Be_You": "Be Beauty - Be You"
 }
