--- a/public/locales/jp/translation.json
+++ b/public/locales/jp/translation.json
@@ -327,5 +327,27 @@
   "Payment_vn_pay_failed": "Payment VNPay failed",
   "ratings": "ratings",
   "comments": "comments",
-  "Product_details": "Details product"
+  "Product_details": "Details product",
+  "Home": "ホーム",
+  "About_Us": "私たちについて",
+  "Booking_now": "今すぐ予約",
+  "Package": "サービス",
+  "Contact_Us": "お問い合わせ",
+  "Opening_Daily": "毎日営業中",
+  "Quantity_quest": "ゲスト数",
+  "Duration": "時間",
+  "Others_packages": "その他のサービスメモ",
+  "Pickup_time": "到着日",
+  "Spa_Package": "私たちのサービス",
+  "About_urban_spa": "アーバンスパについて",
+  "Premium_Spa_And_Relaxation_And_Beauty": "高級スパ、リラクゼーション、美容",
+  "Enter_your_quantity": "ゲスト数を入力してください",
+  "Enter_your_notes": "追加のサービスメモを入力してください",
+  "contact_1": "リラックスしてリフレッシュできる体験をお探しなら、当スパがぴったりです。",
+  "contact_2": "私たちは最高品質のサービスを提供することをお約束します。",
+  "contact_3": "ご予約はお気軽にお問い合わせください。",
+  "Email": "メール",
+  "Inbox_Facebook": "Facebook 受信トレイ",
+  "Hotline": "ホットライン (WhatsApp / Zalo)",
+  "Be_Beauty_Be_You": "美しく、あなたらしく"
 }
