--- a/public/locales/ko/translation.json
+++ b/public/locales/ko/translation.json
@@ -327,5 +327,27 @@
   "Payment_vn_pay_failed": "Payment VNPay failed",
   "ratings": "ratings",
   "comments": "comments",
-  "Product_details": "Details product"
+  "Product_details": "Details product",
+  "Home": "홈",
+  "About_Us": "회사 소개",
+  "Booking_now": "지금 예약",
+  "Package": "서비스",
+  "Contact_Us": "문의하기",
+  "Opening_Daily": "매일 영업",
+  "Quantity_quest": "고객 수",
+  "Duration": "소요 시간",
+  "Others_packages": "기타 서비스 메모",
+  "Pickup_time": "도착 날짜",
+  "Spa_Package": "우리의 서비스",
+  "About_urban_spa": "어반 스파 소개",
+  "Premium_Spa_And_Relaxation_And_Beauty": "고급 스파, 휴식 및 뷰티",
+  "Enter_your_quantity": "고객 수를 입력하세요",
+  "Enter_your_notes": "추가 서비스 메모를 입력하세요",
+  "contact_1": "편안하고 상쾌한 경험을 원하신다면 저희 스파가 완벽한 장소입니다.",
+  "contact_2": "최고 품질의 서비스를 제공하겠습니다.",
+  "contact_3": "예약을 위해 저희에게 연락주세요.",
+  "Email": "이메일",
+  "Inbox_Facebook": "페이스북 받은 편지함",
+  "Hotline": "핫라인 (WhatsApp / Zalo)",
+  "Be_Beauty_Be_You": "아름다움 그대로, 당신답게"
 }
