--- a/public/locales/vi/translation.json
+++ b/public/locales/vi/translation.json
@@ -10,7 +10,6 @@
   "Pending": "Chờ khách hàng",
   "Completed": "Đã thanh toán",
   "Cancelled": "Huỷ đơn",
-  "Package": "Gói dịch vụ",
   "City": "Thành phố",
   "Phone_number": "Số điện thoại",
   "Enter_your_city": "Chọn thành phố của bạn",
@@ -352,5 +351,28 @@
   "Payment_vn_pay_failed": "Thanh toán VNPay thất bại",
   "ratings": "đánh giá",
   "comments": "bình luận",
-  "Product_details": "Chi tiết sản phẩm"
+  "Product_details": "Chi tiết sản phẩm",
+  "": "here",
+  "Home": "Trang chủ",
+  "About_Us": "Về chúng tôi",
+  "Booking_now": "Đặt lịch",
+  "Package": "Dịch vụ",
+  "Contact_Us": "Liên hệ với chúng tôi",
+  "Opening_Daily": "Mở cửa hàng ngày",
+  "Quantity_quest": "Số lượng khách",
+  "Duration": "Thời lượng",
+  "Others_packages": "Ghi chú dịch vụ khác",
+  "Pickup_time": "Ngày đến",
+  "Spa_Package": "Dịch vụ của chúng tôi",
+  "About_urban_spa": "Về Urban Spa",
+  "Premium_Spa_And_Relaxation_And_Beauty": "Spa cao cấp, thư giãn và làm đẹp",
+  "Enter_your_quantity": "Nhập số lượng khách hàng",
+  "Enter_your_notes": "Nhập các dịch vụ khách",
+  "contact_1": "Nếu bạn đang tìm kiếm một trải nghiệm thư giãn và phục hồi, spa của chúng tôi là nơi hoàn hảo dành cho bạn,",
+  "contact_2": "Chúng tôi cam kết mang đến dịch vụ chất lượng tốt nhất,",
+  "contact_3": "Vui lòng liên hệ với chúng tôi để đặt lịch hẹn.",
+  "Email": "Email",
+  "Inbox_Facebook": "Facebook Inbox",
+  "Hotline": "Hotline (WhatsApp / Zalo)",
+  "Be_Beauty_Be_You": "Be Beauty - Be You"
 }
