--- a/public/locales/vi/translation.json
+++ b/public/locales/vi/translation.json
@@ -357,6 +357,7 @@
   "About_Us": "Về chúng tôi",
   "Booking_now": "Đặt lịch",
   "Package": "Dịch vụ",
+  "Category": "Danh mục",
   "Contact_Us": "Liên hệ với chúng tôi",
   "Opening_Daily": "Mở cửa hàng ngày",
   "Quantity_quest": "Số lượng khách",
