--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -328,7 +328,7 @@
   "Product_details": "Details product",
   "Home": "Home",
   "About_Us": "About Us",
-  "Booking_now": "Book Now",
+  "Booking_now": "Booking Now",
   "Package": "Service",
   "Contact_Us": "Contact Us",
   "Opening_Daily": "Open Daily",
