--- a/public/locales/vi/translation.json
+++ b/public/locales/vi/translation.json
@@ -375,5 +375,10 @@
   "Email": "Email",
   "Inbox_Facebook": "Facebook Inbox",
   "Hotline": "Hotline (WhatsApp / Zalo)",
-  "Be_Beauty_Be_You": "Be Beauty - Be You"
+  "Be_Beauty_Be_You": "Be Beauty - Be You",
+  "time_service": "Khung giờ phục vụ",
+  "time_opening": "Thời gian mở cửa",
+  "Hotline_short": "Hotline",
+  "Review_by_customer": "Đánh giá của khách hàng",
+  "Hanoi_Urban_Oasis_Spa_Discount": "Hanoi Urban Oasis Spa xin gửi lời tri ân tới khách hàng của chúng tôi bằng ưu đãi giảm giá 10% cho tất cả các dịch vụ spa (chỉ áp dụng với khách đặt trước để đảm bảo chất lượng dịch vụ)"
 }
