--- a/public/locales/jp/translation.json
+++ b/public/locales/jp/translation.json
@@ -349,5 +349,10 @@
   "Email": "メール",
   "Inbox_Facebook": "Facebook 受信トレイ",
   "Hotline": "ホットライン (WhatsApp / Zalo)",
-  "Be_Beauty_Be_You": "美しく、あなたらしく"
+  "Be_Beauty_Be_You": "美しく、あなたらしく",
+  "time_service": "サービス時間",
+  "time_opening": "営業時間",
+  "Hotline_short": "ホットライン",
+  "Review_by_customer": "お客様のレビュー",
+  "Hanoi_Urban_Oasis_Spa_Discount": "ハノイ アーバン オアシス スパは、お客様への感謝の気持ちを込めて、すべてのスパサービスに対し10％割引をご提供します（サービスの品質を確保するために予約のみ適用されます）"
 }
