--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -347,5 +347,10 @@
   "Email": "Email",
   "Inbox_Facebook": "Facebook Inbox",
   "Hotline": "Hotline (WhatsApp / Zalo)",
-  "Be_Beauty_Be_You": "Be Beauty - Be You"
+  "Be_Beauty_Be_You": "Be Beauty - Be You",
+  "time_service": "Service Hours",
+  "time_opening": "Opening Hours",
+  "Hotline_short": "Hotline",
+  "Review_by_customer": "Customer Reviews",
+  "Hanoi_Urban_Oasis_Spa_Discount": "Hanoi Urban Oasis Spa would like to express our appreciation for our customers with a 10% discount on all spa services (reservation only, to ensure our quality of service)"
 }
