--- a/public/locales/vi/translation.json
+++ b/public/locales/vi/translation.json
@@ -380,5 +380,29 @@
   "time_opening": "Thời gian mở cửa",
   "Hotline_short": "Hotline",
   "Review_by_customer": "Đánh giá của khách hàng",
-  "Hanoi_Urban_Oasis_Spa_Discount": "Hanoi Urban Oasis Spa xin gửi lời tri ân tới khách hàng của chúng tôi bằng ưu đãi giảm giá 10% cho tất cả các dịch vụ spa (chỉ áp dụng với khách đặt trước để đảm bảo chất lượng dịch vụ)"
+  "Hanoi_Urban_Oasis_Spa_Discount": "Hanoi Urban Oasis Spa xin gửi lời tri ân tới khách hàng của chúng tôi bằng ưu đãi giảm giá 10% cho tất cả các dịch vụ spa (chỉ áp dụng với khách đặt trước để đảm bảo chất lượng dịch vụ)",
+  "Edit_category": "Chỉnh sửa danh mục",
+  "Create_category": "Thêm danh mục",
+  "Edit_Service": "Chỉnh sửa dịch vụ",
+  "Create_Service": "Thêm dịch vụ",
+  "Name_Korean": "Tên (Hàn)",
+  "Name_Japanese": "Tên (Nhật)",
+  "Name_English": "Tên (Anh)",
+  "Description_Korean": "Mô tả (Hàn)",
+  "Description_English": "Mô tả (Anh)",
+  "Description_Japanese": "Mô tả (Nhật)",
+  "Options": "Lựa chọn",
+  "Enter_Description": "Nhập mô tả",
+  "Enter_Description_Korean": "Nhập mô tả (Hàn)",
+  "Enter_Description_English": "Nhập mô tả (Anh)",
+  "Enter_Description_Japanese": "Nhập mô tả (Nhật)",
+  "Enter_Name": "Nhập tên",
+  "Enter_Name_Korean": "Nhập tên (Hàn)",
+  "Enter_Name_Japanese": "Nhập tên (Nhật)",
+  "Enter_Name_English": "Nhập tên (Anh)",
+  "Enter_Duration": "Nhập thời lượng",
+  "Create_category_success": "Tạo danh mục thành công",
+  "Update_category_success": "Chỉnh sửa danh mục thành công",
+  "Create_service_success": "Tạo dịch vụ thành công",
+  "Update_service_success": "Cập nhật dịch vụ thành công"
 }
