--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -352,5 +352,6 @@
   "time_opening": "Opening Hours",
   "Hotline_short": "Hotline",
   "Review_by_customer": "Customer Reviews",
-  "Hanoi_Urban_Oasis_Spa_Discount": "Hanoi Urban Oasis Spa would like to express our appreciation for our customers with a 10% discount on all spa services (reservation only, to ensure our quality of service)"
+  "Hanoi_Urban_Oasis_Spa_Discount": "Hanoi Urban Oasis Spa would like to express our appreciation for our customers with a 10% discount on all spa services (reservation only, to ensure our quality of service)",
+  "View_Detail": "Details"
 }
