--- a/public/locales/vi/translation.json
+++ b/public/locales/vi/translation.json
@@ -368,7 +368,7 @@
   "About_urban_spa": "Về Urban Spa",
   "Premium_Spa_And_Relaxation_And_Beauty": "Spa cao cấp, thư giãn và làm đẹp",
   "Enter_your_quantity": "Nhập số lượng khách hàng",
-  "Enter_your_notes": "Nhập các dịch vụ khách",
+  "Enter_your_notes": "Nhập các dịch vụ khác",
   "contact_1": "Nếu bạn đang tìm kiếm một trải nghiệm thư giãn và phục hồi, spa của chúng tôi là nơi hoàn hảo dành cho bạn,",
   "contact_2": "Chúng tôi cam kết mang đến dịch vụ chất lượng tốt nhất,",
   "contact_3": "Vui lòng liên hệ với chúng tôi để đặt lịch hẹn.",
@@ -405,5 +405,22 @@
   "Update_category_success": "Chỉnh sửa danh mục thành công",
   "Create_service_success": "Tạo dịch vụ thành công",
   "Update_service_success": "Cập nhật dịch vụ thành công",
-  "View_Detail": "Chi tiết"
+  "View_Detail": "Chi tiết",
+  "About_Us_Korean": "Về chúng tôi (Hàn)",
+  "About_Us_Japanese": "Về chúng tôi (Nhật)",
+  "About_Us_English": "Về chúng tôi (Anh)",
+  "Enter_About_Us_Korean": "Nhập về chúng tôi (Hàn)",
+  "Enter_About_Us_Japanese": "Nhập về chúng tôi (Nhật)",
+  "Enter_About_Us_English": "Nhập về chúng tôi (Anh)",
+  "Enter_About_Us": "Nhập về chúng tôi",
+  "Edit_order": "Chỉnh sửa đơn hàng",
+  "Add_Option": "Thêm",
+  "Total_price_pay": "Tổng tiền khách trả",
+  "Language": "Ngôn ngữ",
+  "Note": "Ghi chú khách hàng",
+  "Appointments": "Lịch hẹn",
+  "Dashboard": "Tổng quan",
+  "Statistics": "Thống kê",
+  "Appointment": "Đơn hàng",
+  "Revenue": "Tổng doanh thu"
 }
