--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -353,5 +353,37 @@
   "Hotline_short": "Hotline",
   "Review_by_customer": "Customer Reviews",
   "Hanoi_Urban_Oasis_Spa_Discount": "Hanoi Urban Oasis Spa would like to express our appreciation for our customers with a 10% discount on all spa services (reservation only, to ensure our quality of service)",
-  "View_Detail": "Details"
+  "View_Detail": "Details",
+  "About_Us_Korean": "About Us (Korean)",
+  "About_Us_Japanese": "About Us (Japanese)",
+  "About_Us_English": "About Us (English)",
+  "Enter_About_Us_Korean": "Enter About Us (Korean)",
+  "Enter_About_Us_Japanese": "Enter About Us (Japanese)",
+  "Enter_About_Us_English": "Enter About Us (English)",
+  "Enter_About_Us": "Enter About Us",
+  "Edit_order": "Edit Order",
+  "Add_Option": "Add Option",
+  "Total_price_pay": "Total Price to Pay",
+  "Language": "Language",
+  "Note": "Customer Note",
+  "Appointments": "Appointments",
+  "Dashboard": "Dashboard",
+  "Statistics": "Statistics",
+  "Appointment": "Order",
+  "Revenue": "Total Revenue",
+  "About-us": "About Us",
+  "Create_order": "Create Order",
+  "Create_banner": "Create Banner",
+  "Change_banner_image": "Change Banner Image",
+  "Upload_banner_image": "Upload Banner Image",
+  "Create_banner_success": "Banner Created Successfully",
+  "Update_banner_success": "Banner Updated Successfully",
+  "Delete_banner_success": "Banner Deleted Successfully",
+  "Delete_banner_error": "Error Deleting Banner",
+  "Contact": "Contact",
+  "Support_Ready": "We are always ready to assist!",
+  "Contact_Info": "If you need support or want to contact Urban Spa, please reach out using the information below. Thank you.",
+  "Our_Location": "Our Location",
+  "Location_Description": "Urban Spa is located on the lively street of downtown Hanoi at night."
+
 }
