--- a/public/locales/jp/translation.json
+++ b/public/locales/jp/translation.json
@@ -355,5 +355,36 @@
   "Hotline_short": "ホットライン",
   "Review_by_customer": "お客様のレビュー",
   "Hanoi_Urban_Oasis_Spa_Discount": "ハノイ アーバン オアシス スパは、お客様への感謝の気持ちを込めて、すべてのスパサービスに対し10％割引をご提供します（サービスの品質を確保するために予約のみ適用されます）",
-  "View_Detail": "詳細"
+  "View_Detail": "詳細",
+  "About_Us_Korean": "私たちについて (韓国語)",
+  "About_Us_Japanese": "私たちについて (日本語)",
+  "About_Us_English": "私たちについて (英語)",
+  "Enter_About_Us_Korean": "私たちについて (韓国語) を入力",
+  "Enter_About_Us_Japanese": "私たちについて (日本語) を入力",
+  "Enter_About_Us_English": "私たちについて (英語) を入力",
+  "Enter_About_Us": "私たちについてを入力",
+  "Edit_order": "注文を編集",
+  "Add_Option": "オプションを追加",
+  "Total_price_pay": "支払金額",
+  "Language": "言語",
+  "Note": "顧客のメモ",
+  "Appointments": "予約",
+  "Dashboard": "ダッシュボード",
+  "Statistics": "統計",
+  "Appointment": "注文",
+  "Revenue": "総収益",
+  "About-us": "私たちについて",
+  "Create_order": "注文を作成",
+  "Create_banner": "バナーを作成",
+  "Change_banner_image": "バナー画像を変更",
+  "Upload_banner_image": "バナー画像をアップロード",
+  "Create_banner_success": "バナー作成成功",
+  "Update_banner_success": "バナー更新成功",
+  "Delete_banner_success": "バナー削除成功",
+  "Delete_banner_error": "バナー削除エラー",
+  "Contact": "連絡先",
+  "Support_Ready": "私たちは常にサポートの準備ができています！",
+  "Contact_Info": "サポートが必要な場合やUrban Spaに連絡したい場合は、以下の情報を使用してご連絡ください。ありがとうございます。",
+  "Our_Location": "私たちの場所",
+  "Location_Description": "Urban Spaは、ハノイ中心部の夜の賑やかな通りに位置しています。"
 }
