--- a/public/locales/ko/translation.json
+++ b/public/locales/ko/translation.json
@@ -355,5 +355,36 @@
   "Hotline_short": "핫라인",
   "Review_by_customer": "고객 리뷰",
   "Hanoi_Urban_Oasis_Spa_Discount": "하노이 어반 오아시스 스파는 모든 스파 서비스에 대해 10% 할인 혜택을 제공하며, 고객님께 감사의 마음을 전합니다 (서비스 품질을 보장하기 위해 예약 전용)",
-  "View_Detail": "세부 사항"
+  "View_Detail": "세부 사항",
+  "About_Us_Korean": "회사 소개 (한국어)",
+  "About_Us_Japanese": "회사 소개 (일본어)",
+  "About_Us_English": "회사 소개 (영어)",
+  "Enter_About_Us_Korean": "회사 소개 (한국어) 입력",
+  "Enter_About_Us_Japanese": "회사 소개 (일본어) 입력",
+  "Enter_About_Us_English": "회사 소개 (영어) 입력",
+  "Enter_About_Us": "회사 소개 입력",
+  "Edit_order": "주문 수정",
+  "Add_Option": "옵션 추가",
+  "Total_price_pay": "지불 총액",
+  "Language": "언어",
+  "Note": "고객 메모",
+  "Appointments": "예약",
+  "Dashboard": "대시보드",
+  "Statistics": "통계",
+  "Appointment": "주문",
+  "Revenue": "총 수익",
+  "About-us": "회사 소개",
+  "Create_order": "주문 생성",
+  "Create_banner": "배너 생성",
+  "Change_banner_image": "배너 이미지 변경",
+  "Upload_banner_image": "배너 이미지 업로드",
+  "Create_banner_success": "배너 생성 성공",
+  "Update_banner_success": "배너 업데이트 성공",
+  "Delete_banner_success": "배너 삭제 성공",
+  "Delete_banner_error": "배너 삭제 오류",
+  "Contact": "연락처",
+  "Support_Ready": "저희는 언제나 지원할 준비가 되어 있습니다!",
+  "Contact_Info": "지원이 필요하거나 Urban Spa에 연락하려면 아래 정보를 통해 연락해 주세요. 감사합니다.",
+  "Our_Location": "저희 위치",
+  "Location_Description": "Urban Spa는 하노이 중심가의 밤에 활기찬 거리에 위치하고 있습니다."
 }
