--- a/public/locales/ko/translation.json
+++ b/public/locales/ko/translation.json
@@ -386,5 +386,23 @@
   "Support_Ready": "저희는 언제나 지원할 준비가 되어 있습니다!",
   "Contact_Info": "지원이 필요하거나 Urban Spa에 연락하려면 아래 정보를 통해 연락해 주세요. 감사합니다.",
   "Our_Location": "저희 위치",
-  "Location_Description": "Urban Spa는 하노이 중심가의 밤에 활기찬 거리에 위치하고 있습니다."
+  "Location_Description": "Urban Spa는 하노이의 구시가지에 위치해 있습니다.",
+  "Update_successfully": "업데이트 성공",
+  "Title_delete_multiple_banner": "여러 배너 삭제 확인",
+  "Confirm_delete_multiple_banner": "이 배너들을 삭제하시겠습니까?",
+  "Title_delete_multiple_service": "여러 서비스 삭제 확인",
+  "Confirm_delete_multiple_service": "이 서비스들을 삭제하시겠습니까?",
+  "Delete_multiple_service_success": "여러 서비스를 성공적으로 삭제했습니다",
+  "Title_delete_service": "서비스 삭제 확인",
+  "Confirm_delete_service": "이 서비스를 삭제하시겠습니까?",
+  "Title_delete_banner": "배너 삭제 확인",
+  "Confirm_delete_banner": "이 배너를 삭제하시겠습니까?",
+  "Delete_service_success": "서비스가 성공적으로 삭제되었습니다",
+  "Title_delete_package": "카테고리 삭제 확인",
+  "Confirm_delete_package": "이 카테고리를 삭제하시겠습니까?",
+  "Title_delete_multiple_package": "여러 카테고리 삭제 확인",
+  "Confirm_delete_multiple_package": "이 카테고리들을 삭제하시겠습니까?",
+  "Delete_multiple_package_success": "여러 카테고리를 성공적으로 삭제했습니다",
+  "Upload_image": "이미지 업로드",
+  "Change_image": "이미지 변경"
 }
