--- a/public/locales/vi/translation.json
+++ b/public/locales/vi/translation.json
@@ -436,5 +436,23 @@
   "Support_Ready": "Chúng tôi luôn sẵn sàng hỗ trợ!",
   "Contact_Info": "Nếu bạn cần hỗ trợ hoặc liên hệ với Urban Spa, vui lòng liên hệ theo thông tin bên dưới. Trân trọng cảm ơn.",
   "Our_Location": "Vị trí của chúng tôi",
-  "Location_Description": "Urban Spa nằm trên con đường nhộn nhịp về đêm của trung tâm Hà Nội."
+  "Location_Description": "Urban Spa nằm trên phố cổ Hà Nội.",
+  "Update_successfully": "Cập nhật thành công",
+  "Title_delete_multiple_banner": "Xác nhận xoá nhiều ảnh",
+  "Confirm_delete_multiple_banner": "Bạn có chắc xoá những ảnh này?",
+  "Title_delete_multiple_service": "Xác nhận xoá nhiều dịch vụ",
+  "Confirm_delete_multiple_service": "Bạn có chắc xoá những dịch vụ này?",
+  "Delete_multiple_service_success": "Xoá nhiều ảnh thành công",
+  "Title_delete_service": "Xác nhận xoá dịch vụ",
+  "Confirm_delete_service": "Bạn có chắc xoá dịch vụ này?",
+  "Title_delete_banner": "Xác nhận xoá ảnh",
+  "Confirm_delete_banner": "Bạn có chắc xoá ảnh này?",
+  "Delete_service_success": "Xoá dịch vụ thành công",
+  "Title_delete_package": "Xác nhận xoá danh mục",
+  "Confirm_delete_package": "Bạn có chắc xoá dịch vụ này?",
+  "Title_delete_multiple_package": "Xác nhận xoá nhiều danh mục",
+  "Confirm_delete_multiple_package": "Bạn có chắc xoá những danh mục này?",
+  "Delete_multiple_package_success": "Xoá nhiều danh mục thành công",
+  "Upload_image": "Tải ảnh",
+  "Change_image": "Thay đổi ảnh"
 }
