--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -384,6 +384,23 @@
   "Support_Ready": "We are always ready to assist!",
   "Contact_Info": "If you need support or want to contact Urban Spa, please reach out using the information below. Thank you.",
   "Our_Location": "Our Location",
-  "Location_Description": "Urban Spa is located on the lively street of downtown Hanoi at night."
-
+  "Location_Description": "Urban Spa is located on the Old Quarter of Hanoi.",
+  "Update_successfully": "Updated successfully",
+  "Title_delete_multiple_banner": "Confirm delete multiple banners",
+  "Confirm_delete_multiple_banner": "Are you sure you want to delete these banners?",
+  "Title_delete_multiple_service": "Confirm delete multiple services",
+  "Confirm_delete_multiple_service": "Are you sure you want to delete these services?",
+  "Delete_multiple_service_success": "Multiple services deleted successfully",
+  "Title_delete_service": "Confirm delete service",
+  "Confirm_delete_service": "Are you sure you want to delete this service?",
+  "Title_delete_banner": "Confirm delete banner",
+  "Confirm_delete_banner": "Are you sure you want to delete this banner?",
+  "Delete_service_success": "Service deleted successfully",
+  "Title_delete_package": "Confirm delete category",
+  "Confirm_delete_package": "Are you sure you want to delete this category?",
+  "Title_delete_multiple_package": "Confirm delete multiple categories",
+  "Confirm_delete_multiple_package": "Are you sure you want to delete these categories?",
+  "Delete_multiple_package_success": "Multiple categories deleted successfully",
+  "Upload_image": "Upload image",
+  "Change_image": "Change image"
 }
