--- a/public/locales/jp/translation.json
+++ b/public/locales/jp/translation.json
@@ -386,5 +386,23 @@
   "Support_Ready": "私たちは常にサポートの準備ができています！",
   "Contact_Info": "サポートが必要な場合やUrban Spaに連絡したい場合は、以下の情報を使用してご連絡ください。ありがとうございます。",
   "Our_Location": "私たちの場所",
-  "Location_Description": "Urban Spaは、ハノイ中心部の夜の賑やかな通りに位置しています。"
+  "Location_Description": "Urban Spaはハノイの旧市街にあります。",
+  "Update_successfully": "更新成功",
+  "Title_delete_multiple_banner": "複数のバナーを削除確認",
+  "Confirm_delete_multiple_banner": "これらのバナーを削除してもよろしいですか？",
+  "Title_delete_multiple_service": "複数のサービス削除確認",
+  "Confirm_delete_multiple_service": "これらのサービスを削除してもよろしいですか？",
+  "Delete_multiple_service_success": "複数のサービスを削除しました",
+  "Title_delete_service": "サービス削除確認",
+  "Confirm_delete_service": "このサービスを削除してもよろしいですか？",
+  "Title_delete_banner": "バナー削除確認",
+  "Confirm_delete_banner": "このバナーを削除してもよろしいですか？",
+  "Delete_service_success": "サービスを削除しました",
+  "Title_delete_package": "カテゴリ削除確認",
+  "Confirm_delete_package": "このカテゴリを削除してもよろしいですか？",
+  "Title_delete_multiple_package": "複数カテゴリ削除確認",
+  "Confirm_delete_multiple_package": "これらのカテゴリを削除してもよろしいですか？",
+  "Delete_multiple_package_success": "複数のカテゴリを削除しました",
+  "Upload_image": "画像をアップロード",
+  "Change_image": "画像を変更"
 }
