--- a/public/locales/vi/translation.json
+++ b/public/locales/vi/translation.json
@@ -454,5 +454,6 @@
   "Confirm_delete_multiple_package": "Bạn có chắc xoá những danh mục này?",
   "Delete_multiple_package_success": "Xoá nhiều danh mục thành công",
   "Upload_image": "Tải ảnh",
-  "Change_image": "Thay đổi ảnh"
+  "Change_image": "Thay đổi ảnh",
+  "Image_Size_Limit": "Ảnh không được vượt quá 10MB"
 }
