update admin ui

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,4 +1,9 @@
 {
+  "Total_price": "Total Price",
+  "Pending": "Pending",
+  "Completed": "Completed",
+  "Cancelled": "Cancelled",
+  "Status": "Status",
   "Account": "Account",
   "My_profile": "My Profile",
   "Enter_your_email": "Enter your email",
@@ -10,7 +15,7 @@
   "minutes": "m",
   "Phone_number": "Phone number",
   "Enter_your_city": "Choose your city",
-  "Enter_your_full_name": "Enter your full name",
+  "Enter_your_full_name": "Enter full name",
   "Enter_your_phone": "Enter your phone number",
   "Enter_your_address": "Enter your address",
   "Upload_avatar": "Upload avatar",
@@ -98,7 +103,6 @@
   "Title_delete_multiple_user": "Confirm delete multiple users",
   "Confirm_delete_multiple_user": "Are you sure you want to delete these users?",
   "Blocking": "Blocking",
-  "Status": "Status",
   "Create_city_success": "City created successfully",
   "Update_city_success": "City updated successfully",
   "Create_city_error": "City creation failed",
@@ -404,5 +408,31 @@
   "Delete_multiple_package_success": "Multiple categories deleted successfully",
   "Upload_image": "Upload image",
   "Change_image": "Change image",
-  "Image_Size_Limit": "The image must not exceed 10MB"
+  "Image_Size_Limit": "The image must not exceed 10MB",
+  "Name_Korean": "Name (Korean)",
+  "Name_Japanese": "Name (Japanese)",
+  "Name_English": "Name (English)",
+  "Description_Korean": "Description (Korean)",
+  "Description_English": "Description (English)",
+  "Description_Japanese": "Description (Japanese)",
+  "Options": "Options",
+  "Actions": "Actions",
+  "Search": "Search",
+  "Create_Service": "Add Service",
+  "Enter_Description": "Enter Description",
+  "Enter_Description_Korean": "Enter Description (Korean)",
+  "Enter_Description_English": "Enter Description (English)",
+  "Enter_Description_Japanese": "Enter Description (Japanese)",
+  "Enter_Name": "Enter Name",
+  "Enter_Name_Korean": "Enter Name (Korean)",
+  "Enter_Name_Japanese": "Enter Name (Japanese)",
+  "Enter_Name_English": "Enter Name (English)",
+  "Enter_Duration": "Enter Duration",
+  "Create_category_success": "Category created successfully",
+  "Update_category_success": "Category updated successfully",
+  "Create_service_success": "Service created successfully",
+  "Update_service_success": "Service updated successfully",
+  "Create_category": "Add Category",
+  "Edit_category": "Edit Category",
+  "Edit_Service": "Edit Service"
 }
