--- a/public/locales/vi/translation.json
+++ b/public/locales/vi/translation.json
@@ -368,7 +368,7 @@
   "About_urban_spa": "Về Urban Spa",
   "Premium_Spa_And_Relaxation_And_Beauty": "Spa cao cấp, thư giãn và làm đẹp",
   "Enter_your_quantity": "Nhập số lượng khách hàng",
-  "Enter_your_notes": "Nhập các dịch vụ khác",
+  "Enter_your_notes": "Nhập ghi chú khách hàng",
   "contact_1": "Nếu bạn đang tìm kiếm một trải nghiệm thư giãn và phục hồi, spa của chúng tôi là nơi hoàn hảo dành cho bạn,",
   "contact_2": "Chúng tôi cam kết mang đến dịch vụ chất lượng tốt nhất,",
   "contact_3": "Vui lòng liên hệ với chúng tôi để đặt lịch hẹn.",
@@ -442,7 +442,7 @@
   "Confirm_delete_multiple_banner": "Bạn có chắc xoá những ảnh này?",
   "Title_delete_multiple_service": "Xác nhận xoá nhiều dịch vụ",
   "Confirm_delete_multiple_service": "Bạn có chắc xoá những dịch vụ này?",
-  "Delete_multiple_service_success": "Xoá nhiều ảnh thành công",
+  "Delete_multiple_service_success": "Xoá nhiều dịch vụ thành công",
   "Title_delete_service": "Xác nhận xoá dịch vụ",
   "Confirm_delete_service": "Bạn có chắc xoá dịch vụ này?",
   "Title_delete_banner": "Xác nhận xoá ảnh",
