--- a/public/locales/vi/translation.json
+++ b/public/locales/vi/translation.json
@@ -285,11 +285,14 @@
   "Paid": "Đã thanh toán",
   "Not_pay": "Chưa thanh toán",
   "Title_delete_order_product": "Xác nhận xóa đơn hàng",
-  "Confirm_delete_order_product": "Xác nhận xóa đơn hàng",
+  "Confirm_delete_order_product": "Bạn có chắc xóa đơn hàng này",
   "Update_order_product_success": "Cập nhật đơn hàng thành công",
   "Update_order_product_error": "Cập nhật đơn hàng thất bại",
   "Delete_order_product_success": "Xóa đơn hàng thành công",
   "Delete_order_product_error": "Xóa đơn hàng thất bại",
+  "Title_delete_multiple_Order": "Xác nhận xoá nhiều dịch vụ",
+  "Confirm_delete_multiple_Order": "Bạn có chắc xoá những dịch vụ này?",
+  "Delete_multiple_order_success":"Xoá nhiều đơn hàng thành công",
   "Product_items": "Sản phẩm",
   "Total_price": "Tổng tiền",
   "Search": "Tìm kiếm",
@@ -455,5 +458,7 @@
   "Delete_multiple_package_success": "Xoá nhiều danh mục thành công",
   "Upload_image": "Tải ảnh",
   "Change_image": "Thay đổi ảnh",
-  "Image_Size_Limit": "Ảnh không được vượt quá 10MB"
+  "Image_Size_Limit": "Ảnh không được vượt quá 10MB",
+  "Users": "Người dùng",
+  "Sales": "Doanh số"
 }
