update: admin dashboard

--- a/public/locales/jp/translation.json
+++ b/public/locales/jp/translation.json
@@ -6,9 +6,13 @@
   "Create_category": "カテゴリ追加",
   "Edit_Service": "サービス編集",
   "Total_price": "合計金額",
+  "Phone number must contain only numbers": "電話番号は数字のみで構成する必要があります",
+  "Phone number must be at least 9 digits": "電話番号は最低9桁である必要があります",
+  "Minimum quantity is 1": "最小数量は1です",
   "Pending": "顧客待ち",
   "Completed": "完了",
   "Cancelled": "キャンセル",
+  "Invalid_email_format": "無効なメール形式",
   "Full_name": "フルネーム",
   "Required_field": "このフィールドは必須です",
   "Status": "ステータス",
