--- a/public/locales/ko/translation.json
+++ b/public/locales/ko/translation.json
@@ -6,10 +6,14 @@
   "Edit_category": "카테고리 편집",
   "Edit_Service": "서비스 편집",
   "Total_price": "총 금액",
+  "Phone number must contain only numbers": "전화번호는 숫자만 포함해야 합니다",
+  "Phone number must be at least 9 digits": "전화번호는 최소 9자리여야 합니다",
+  "Minimum quantity is 1": "최소 수량은 1입니다",
   "Pending": "고객 대기 중",
   "Completed": "완료됨",
   "Cancelled": "취소됨",
   "Full_name": "전체 이름",
+  "Invalid_email_format": "잘못된 이메일 형식",
   "Required_field": "이 필드는 필수입니다",
   "Status": "상태",
   "Account": "계정",
