--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -437,6 +437,10 @@
   "Edit_Service": "Edit Service",
   "Users": "Users",
   "Sales": "Sales",
+  "Phone number must contain only numbers": "Phone number must contain only numbers",
+  "Phone number must be at least 9 digits": "Phone number must be at least 9 digits",
+  "Minimum quantity is 1": "Minimum quantity is 1",
+  "Invalid_email_format": "Invalid email format",
   "Title_delete_order_product": "Confirm delete order",
   "Confirm_delete_order_product": "Are you sure you want to delete this order?",
   "Update_order_product_success": "Order updated successfully",
