--- a/public/locales/jp/translation.json
+++ b/public/locales/jp/translation.json
@@ -16,6 +16,7 @@
   "Full_name": "フルネーム",
   "Required_field": "このフィールドは必須です",
   "Status": "ステータス",
+  "Sign_in": "サインイン",
   "Account": "アカウント",
   "My_profile": "マイプロフィール",
   "Enter_your_email": "メールアドレスを入力",
