--- a/public/locales/ko/translation.json
+++ b/public/locales/ko/translation.json
@@ -16,6 +16,7 @@
   "Invalid_email_format": "잘못된 이메일 형식",
   "Required_field": "이 필드는 필수입니다",
   "Status": "상태",
+  "Sign_in": "로그인",
   "Account": "계정",
   "My_profile": "내 프로필",
   "Enter_your_email": "이메일 입력",
