update: remove reviews google map

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -355,7 +355,7 @@
   "time_service": "Service Hours",
   "time_opening": "Opening Hours",
   "Hotline_short": "Hotline",
-  "Review_by_customer": "Customer Reviews",
+  "Review_by_customer": "Customer Experience",
   "Hanoi_Urban_Oasis_Spa_Discount": "Hanoi Urban Oasis Spa would like to express our appreciation for our customers with a 10% discount on all spa services (reservation only, to ensure our quality of service)",
   "View_Detail": "Details",
   "About_Us_Korean": "About Us (Korean)",
