--- a/public/locales/jp/translation.json
+++ b/public/locales/jp/translation.json
@@ -368,7 +368,7 @@
   "time_service": "サービス時間",
   "time_opening": "営業時間",
   "Hotline_short": "ホットライン",
-  "Review_by_customer": "お客様のレビュー",
+  "Review_by_customer": "顧客の体験",
   "Hanoi_Urban_Oasis_Spa_Discount": "ハノイ アーバン オアシス スパは、お客様への感謝の気持ちを込めて、すべてのスパサービスに対し10％割引をご提供します（サービスの品質を確保するために予約のみ適用されます）",
   "View_Detail": "詳細",
   "About_Us_Korean": "私たちについて (韓国語)",
