--- a/public/locales/ko/translation.json
+++ b/public/locales/ko/translation.json
@@ -363,7 +363,7 @@
   "time_service": "서비스 시간",
   "time_opening": "영업 시간",
   "Hotline_short": "핫라인",
-  "Review_by_customer": "고객 리뷰",
+  "Review_by_customer": "고객 경험",
   "Hanoi_Urban_Oasis_Spa_Discount": "하노이 어반 오아시스 스파는 모든 스파 서비스에 대해 10% 할인 혜택을 제공하며, 고객님께 감사의 마음을 전합니다 (서비스 품질을 보장하기 위해 예약 전용)",
   "View_Detail": "세부 사항",
   "About_Us_Korean": "회사 소개 (한국어)",
