--- a/public/locales/vi/translation.json
+++ b/public/locales/vi/translation.json
@@ -382,7 +382,7 @@
   "time_service": "Khung giờ phục vụ",
   "time_opening": "Thời gian mở cửa",
   "Hotline_short": "Hotline",
-  "Review_by_customer": "Đánh giá của khách hàng",
+  "Review_by_customer": "Trải nghiệm của khách hàng",
   "Hanoi_Urban_Oasis_Spa_Discount": "Hanoi Urban Oasis Spa xin gửi lời tri ân tới khách hàng của chúng tôi bằng ưu đãi giảm giá 10% cho tất cả các dịch vụ spa (chỉ áp dụng với khách đặt trước để đảm bảo chất lượng dịch vụ)",
   "Edit_category": "Chỉnh sửa danh mục",
   "Create_category": "Thêm danh mục",
