update(ui): navigation

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -5,6 +5,7 @@
   "Cancelled": "Cancelled",
   "Status": "Status",
   "Account": "Account",
+  "Time": "Time",
   "My_profile": "My Profile",
   "Enter_your_email": "Enter your email",
   "Role": "Role",
