--- a/public/locales/vi/translation.json
+++ b/public/locales/vi/translation.json
@@ -199,7 +199,7 @@
   "Upload_image_product": "Tải ảnh sản phẩm",
   "Status_product": "Trạng thái sản phẩm",
   "Count_in_stock": "Số lượng sản phẩm trong kho",
-  "Price": "Giá",
+  "Price": "Giá tiền",
   "Enter_price": "Nhập giá",
   "Enter_your_count": "Nhập số lượng",
   "Enter_discount": "Nhập giảm giá",
@@ -381,6 +381,7 @@
   "Be_Beauty_Be_You": "Be Beauty - Be You",
   "time_service": "Khung giờ phục vụ",
   "time_opening": "Thời gian mở cửa",
+   "Time": "Thời gian",
   "Hotline_short": "Hotline",
   "Review_by_customer": "Trải nghiệm của khách hàng",
   "Hanoi_Urban_Oasis_Spa_Discount": "Hanoi Urban Oasis Spa xin gửi lời tri ân tới khách hàng của chúng tôi bằng ưu đãi giảm giá 10% cho tất cả các dịch vụ spa (chỉ áp dụng với khách đặt trước để đảm bảo chất lượng dịch vụ)",
