--- a/public/locales/vi/translation.json
+++ b/public/locales/vi/translation.json
@@ -199,7 +199,7 @@
   "Upload_image_product": "Tải ảnh sản phẩm",
   "Status_product": "Trạng thái sản phẩm",
   "Count_in_stock": "Số lượng sản phẩm trong kho",
-  "Price": "Giá tiền",
+  "Price": "Giá",
   "Enter_price": "Nhập giá",
   "Enter_your_count": "Nhập số lượng",
   "Enter_discount": "Nhập giảm giá",
@@ -380,7 +380,7 @@
   "Be_Beauty_Be_You": "Be Beauty - Be You",
   "time_service": "Khung giờ phục vụ",
   "time_opening": "Thời gian mở cửa",
-   "Time": "Thời gian",
+  "Time": "Thời gian",
   "Hotline_short": "Hotline",
   "Review_by_customer": "Trải nghiệm của khách hàng",
   "Hanoi_Urban_Oasis_Spa_Discount": "Hanoi Urban Oasis Spa xin gửi lời tri ân tới khách hàng của chúng tôi bằng ưu đãi giảm giá 10% cho tất cả các dịch vụ spa (chỉ áp dụng với khách đặt trước để đảm bảo chất lượng dịch vụ)",
@@ -465,5 +465,7 @@
   "Phone number must contain only numbers": "Số điện thoại phải chỉ chứa các chữ số",
   "Phone number must be at least 9 digits": "Số điện thoại phải có ít nhất 9 chữ số",
   "Minimum quantity is 1": "Số lượng tối thiểu là 1",
-  "Sign_in": "Đăng nhập"
+  "Sign_in": "Đăng nhập",
+  "List_price": "Giá niêm yết",
+  "Promotional_price": "Giá khuyến mãi"
 }
