--- a/public/locales/jp/translation.json
+++ b/public/locales/jp/translation.json
@@ -449,5 +449,7 @@
   "Delete_order_product_error": "注文の削除に失敗しました",
   "Title_delete_multiple_Order": "複数のサービス削除確認",
   "Confirm_delete_multiple_Order": "これらのサービスを削除してもよろしいですか？",
-  "Delete_multiple_order_success": "複数の注文が削除されました"
+  "Delete_multiple_order_success": "複数の注文が削除されました",
+  "List_price": "定価",
+  "Promotional_price": "プロモーション価格"
 }
