--- a/public/locales/ko/translation.json
+++ b/public/locales/ko/translation.json
@@ -449,5 +449,7 @@
   "Delete_order_product_error": "주문 삭제 실패",
   "Title_delete_multiple_Order": "여러 서비스 삭제 확인",
   "Confirm_delete_multiple_Order": "이 서비스들을 삭제하시겠습니까?",
-  "Delete_multiple_order_success": "여러 주문 삭제 성공"
+  "Delete_multiple_order_success": "여러 주문 삭제 성공",
+  "List_price": "정가",
+  "Promotional_price": "할인 가격"
 }
