--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -453,5 +453,6 @@
   "Delete_multiple_order_success": "Successfully deleted multiple orders",
   "Sign_in": "Sign in",
   "List_price": "List price",
-  "Promotional_price": "Promotional price"
+  "Promotional_price": "Promotional price",
+  "Blog": "News"
 }
