--- a/public/locales/vi/translation.json
+++ b/public/locales/vi/translation.json
@@ -467,5 +467,6 @@
   "Minimum quantity is 1": "Số lượng tối thiểu là 1",
   "Sign_in": "Đăng nhập",
   "List_price": "Giá niêm yết",
-  "Promotional_price": "Giá khuyến mãi"
+  "Promotional_price": "Giá khuyến mãi",
+  "Blog": "Tin tức"
 }
